<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    app:layoutDescription="@xml/activity_brush_scene"
    tools:context=".Brush">

    <ImageView
        android:id="@+id/brush"
        android:layout_width="230dp"
        android:layout_height="140dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/lips"
        android:src="@drawable/brush"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/brush"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"/>

    <ImageView
        android:id="@+id/old_price"
        android:layout_width="105dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/not"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:srcCompat="@drawable/not" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/price"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/old_price" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="75dp"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/buy"
        android:gravity="center_horizontal"
        android:text="@string/buy"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/back"
        android:src="@drawable/component_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="406dp"
        android:layout_height="456dp"
        android:contentDescription="@string/cart"
        android:src="@drawable/cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>