<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/pink">

    <ImageView
        android:id="@+id/k"
        android:contentDescription="@string/k"
        android:layout_marginTop="50dp"
        android:layout_width="175dp"
        android:layout_height="140dp"
        app:srcCompat="@drawable/k_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/k"
        android:text="@string/shop"
        android:textSize="48sp"
        android:gravity="center"
        android:textColor="@color/dark_red"
        android:layout_marginTop="15dp"
        android:id="@+id/shop"/>

    <TextView
        android:id="@+id/discount"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:textSize="36sp"
        android:textColor="@color/red"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/shop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/discounts"/>

    <TextView
        android:id="@+id/lipstick"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/lips"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/discount"
        android:gravity="center"
        android:textSize="36sp"
        android:textColor="@color/dark_red"/>

    <TextView
        android:id="@+id/brushes"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/brushes"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lipstick"
        android:gravity="center"
        android:textSize="36sp"
        android:textColor="@color/dark_red"/>


</androidx.constraintlayout.widget.ConstraintLayout>